logs/ssvm.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/ssvm'...
Compiling './lib/python3.5/site-packages/ssvm/SSVM.py'...
***   File "./lib/python3.5/site-packages/ssvm/SSVM.py", line 35
    print '\n===Error in SSVM-init : A_pos or A_neg must be 2d-array==='
                                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ssvm/kernel.py'...
***   File "./lib/python3.5/site-packages/ssvm/kernel.py", line 37
    print '\n===Error in gaussianKernel : A or tildeA must be 2d-array==='
                                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ssvm/load.py'...
***   File "./lib/python3.5/site-packages/ssvm/load.py", line 18
    print "\n===Error in load-loadcsv : path or file is wrong==="
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ssvm/predictor.py'...
***   File "./lib/python3.5/site-packages/ssvm/predictor.py", line 58
    print "\n===Error in predictor-predict : dimension of test data not equal to training data==="
                                                                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ssvm/split.py'...
***   File "./lib/python3.5/site-packages/ssvm/split.py", line 39
    print "\n===Error in crossValidation : label must be array==="
                                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ssvm/trainer.py'...
***   File "./lib/python3.5/site-packages/ssvm/trainer.py", line 30
    print "\n===Error in trainer-init : data must be numpy 2d array or label_pos out of index==="
                                                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ssvm/tuning.py'...
***   File "./lib/python3.5/site-packages/ssvm/tuning.py", line 46
    print "\n===Error in hibiscus : C_end must greater than C_start==="
                                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ssvm-0.22.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
